--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untitled7",
+  "name": "whatsapp-sender",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,16 +11,28 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
+    "express-session": "^1.18.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "kavenegar": "^1.1.4",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "qrcode": "^1.5.3",
+    "uuid": "^9.0.1",
+    "whatsapp-web.js": "^1.23.0",
+    "ws": "^8.14.2",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.3"
   }
 }
