--- a/package.json
+++ b/package.json
@@ -1,14 +1,30 @@
 {
-  "name": "whatsapp-sender",
+  "name": "whatsapp-campaign-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "A comprehensive WhatsApp campaign management API with advanced features",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "node tests/test-apis.js",
+    "test:campaign": "node tests/test-campaign-apis.js",
+    "test:whatsapp": "node tests/test-whatsapp-integration.js",
+    "test:all": "node tests/test-all-apis.js",
+    "check-env": "node scripts/check-env.js",
+    "make-admin": "node scripts/make-admin.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "whatsapp",
+    "campaign",
+    "api",
+    "messaging",
+    "bulk-sms",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
