--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "ws": "^8.14.2",
     "xlsx": "^0.18.5",
     "zod": "^4.1.3"
+  },
+  "devDependencies": {
+    "supertest": "^7.1.4"
   }
 }
