--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "test:whatsapp": "node tests/test-whatsapp-integration.js",
     "test:all": "node tests/test-all-apis.js",
     "check-env": "node scripts/check-env.js",
-    "make-admin": "node scripts/make-admin.js"
+    "make-admin": "node scripts/make-admin.js",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:deploy": "prisma migrate deploy",
+    "db:studio": "prisma studio",
+    "db:seed": "node prisma/seed.js"
   },
   "keywords": [
     "whatsapp",
@@ -36,7 +41,9 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "kavenegar": "^1.1.4",
-    "mongoose": "^8.18.0",
+    "@prisma/client": "^5.7.1",
+    "prisma": "^5.7.1",
+    "mysql2": "^3.6.5",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.1",
