complited postman file and updated guides

--- a/postman/WhatsApp-Campaign-Environment.postman_environment.json
+++ b/postman/WhatsApp-Campaign-Environment.postman_environment.json
@@ -28,12 +28,22 @@
       "enabled": true
     },
     {
+      "key": "order_id",
+      "value": "",
+      "enabled": true
+    },
+    {
       "key": "user_id",
       "value": "",
       "enabled": true
     },
     {
       "key": "verification_token",
+      "value": "",
+      "enabled": true
+    },
+    {
+      "key": "authority",
       "value": "",
       "enabled": true
     },
