--- a/postman/WhatsApp-Campaign-API.postman_collection.json
+++ b/postman/WhatsApp-Campaign-API.postman_collection.json
@@ -53,7 +53,7 @@
           "response": []
         },
         {
-          "name": "Register User",
+          "name": "Register User (with OTP)",
           "request": {
             "method": "POST",
             "header": [
@@ -64,12 +64,34 @@
             ],
             "body": {
               "mode": "raw",
-              "raw": "{\n  \"name\": \"علی احمدی\",\n  \"email\": \"ali@example.com\",\n  \"phone\": \"09120000000\",\n  \"password\": \"Passw0rd123!\",\n  \"verificationToken\": \"{{verification_token}}\"\n}"
+              "raw": "{\n  \"name\": \"علی احمدی\",\n  \"username\": \"ali_ahmadi\",\n  \"email\": \"ali@example.com\",\n  \"phone\": \"09120000000\",\n  \"password\": \"Passw0rd123!\",\n  \"verificationToken\": \"{{verification_token}}\"\n}"
             },
             "url": {
               "raw": "{{base_url}}/api/user/register",
               "host": ["{{base_url}}"],
               "path": ["api", "user", "register"]
+            }
+          },
+          "response": []
+        },
+        {
+          "name": "Register User (Simple - No OTP)",
+          "request": {
+            "method": "POST",
+            "header": [
+              {
+                "key": "Content-Type",
+                "value": "application/json"
+              }
+            ],
+            "body": {
+              "mode": "raw",
+              "raw": "{\n  \"name\": \"علی احمدی\",\n  \"username\": \"ali_ahmadi\",\n  \"email\": \"ali@example.com\",\n  \"phone\": \"09120000000\",\n  \"password\": \"Passw0rd123!\"\n}"
+            },
+            "url": {
+              "raw": "{{base_url}}/api/user/register-simple",
+              "host": ["{{base_url}}"],
+              "path": ["api", "user", "register-simple"]
             }
           },
           "response": []
