fixed auth bugs

--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.7.1",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
@@ -41,16 +43,15 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "kavenegar": "^1.1.4",
-    "@prisma/client": "^5.7.1",
-    "prisma": "^5.7.1",
-    "mysql2": "^3.6.5",
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.5",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "prisma": "^5.7.1",
     "qrcode": "^1.5.3",
     "uuid": "^9.0.1",
     "whatsapp-web.js": "^1.23.0",
